successfully connected and got the output from the backend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
+<button type="button" routerLink="/signup">Sign up</button>
+<button type="button" routerLink="/login">Log In</button>
 <router-outlet></router-outlet>
